--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>ruTimer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="tailwind.config.js"></script>
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 </head>
 <body>
     Hello, world!
