✨ Use Roboto mono for UI, Roboto for times

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="tailwind.config.js"></script>
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono:wght@400;600&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="font-mono">
     Hello, world!
 </body>
 </html>
