--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@
                     <span>0.00</span>
                 </div>
             </div>
-            <div class="flex items-center justify-center text-4xl grow">
+            <div class="flex items-center justify-center text-4xl grow" id="timer">
                 <div class="flex flex-col items-center gap-8">
-                    <span class="font-sans text-[18rem] mb-[7rem]">0.00</span>
+                    <span class="font-sans text-[18rem] mb-[7rem]" id="time">0.00</span>
                     <div class="text-[4rem]">
                         <span>ao5: </span>
                         <span class="font-sans">0.00</span>
                     </div>
                     <div class="text-[4rem]">
-                        <span>ao5: </span>
+                        <span>ao12: </span>
                         <span class="font-sans">0.00</span>
                     </div>
                 </div>
