✨ Add timing function

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <style type="text/tailwindcss">
         @tailwind base;@tailwind components;@tailwind utilities;.menu-item {@apply hover:text-stone-400 cursor-pointer transition duration-150;}
     </style>
+    <script src="script.js" defer></script>
 </head>
 <body class="font-mono bg-stone-800 text-stone-200">
     <main class="flex flex-col h-screen gap-10 p-10">
